Persistence diagram for experiment 3 added.

--- a/report.tex
+++ b/report.tex
@@ -239,6 +239,13 @@ programming language and the Gudhi library~\cite{maria:2014}.
      \label{Fig:persistence_exp2b}
 \end{figure}
 
+\begin{figure}[!htpb]
+     \centering
+     \includegraphics[width=\textwidth]{./figures/experiment-3-pd.pdf}
+     \caption{Experiment $3$--$3$D cubic uniform distribution.}%
+     \label{Fig:persistence_exp2b}
+\end{figure}
+
 \bibliographystyle{apalike}
 \bibliography{biblio}
 
