Revision based on overleaf changes

--- a/article-overleaf/00-preamble-arxiv.tex
+++ b/article-overleaf/00-preamble-arxiv.tex
@@ -42,3 +42,7 @@
 \affil[4]{adNomus Inc., San Jose, CA, USA}
 \date{}
 
+\newcommand{\gid}[1]{#1}
+\newcommand{\npr}[1]{#1}
+\newcommand{\comment}[1]{#1}
+\newcommand{\correction}[1]{#1}
