--- a/article-overleaf/00-preamble-neco.tex
+++ b/article-overleaf/00-preamble-neco.tex
@@ -19,7 +19,7 @@
 \evensidemargin 0.375in
 \topmargin  -0.55in
 %
-\renewcommand{\baselinestretch}{1.5}
+\renewcommand{\baselinestretch}{1.0}
 %
 \interfootnotelinepenalty=10000
 %
@@ -46,5 +46,7 @@
 
 \renewcommand{\thefootnote}{\normalsize \arabic{footnote}} 	
 
-
-
+\newcommand{\gid}[1]{\textcolor{bostonuniversityred}{#1}}
+\newcommand{\npr}[1]{\textcolor{blendedred}{#1}}
+\newcommand{\comment}[1]{\textcolor{lightgray}{#1}}
+\newcommand{\correction}[1]{\textcolor{blendedred}{#1}}
