--- a/article-overleaf/biblio.bib
+++ b/article-overleaf/biblio.bib
@@ -1,3 +1,41 @@
+@incollection{Barsi:2003,
+  year =         2003,
+  doi =          {10.1007/3-540-45065-3_30},
+  url =          {https://doi.org/10.1007/3-540-45065-3_30},
+  publisher =    {Springer Berlin Heidelberg},
+  pages =        {343--352},
+  author =       {Arpad Barsi},
+  title =        {Neural Self-Organization Using Graphs},
+  booktitle =    {Machine Learning and Data Mining in Pattern
+                  Recognition}
+}
+
+@article{Come:2015,
+  doi =          {10.1016/j.neucom.2013.12.058},
+  url =          {https://doi.org/10.1016/j.neucom.2013.12.058},
+  year =         2015,
+  month =        1,
+  publisher =    {Elsevier {BV}},
+  volume =       147,
+  pages =        {185--196},
+  author =       {Etienne C{\^{o}}me and Marie Cottrell and Patrice
+                  Gaubert},
+  title =        {Analysis of professional trajectories using
+                  disconnected self-organizing maps},
+  journal =      {Neurocomputing}
+}
+
+@inproceedings{Come:2010,
+  author =       {Côme, Etienne and Cottrell, Marie and Verleysen,
+                  Michel and Lacaille, Jérôme},
+  year =         2010,
+  month =        04,
+  title =        {Self Organizing Star (SOS) for health monitoring},
+  booktitle =    {ESANN}
+}
+
+
+  
 @article{vanPelt2013,
   doi = {10.3389/fncom.2013.00160},
   url = {https://doi.org/10.3389/fncom.2013.00160},
