Corrections of some typos

--- a/article-overleaf/01-introduction-revision.tex
+++ b/article-overleaf/01-introduction-revision.tex
@@ -44,13 +44,13 @@ topology seems inadequate for the time series prediction task. But for
 the two others (random and small-world), the difference was not so
 large and topology does not seem to dramatically impact performance.
 %
-\correction{ An alternative approach is to consider the set of neural
-  nodes as an undirected planar graphs in order to take advantage of a
+\correction{An alternative approach is to consider the set of neural
+  nodes as an undirected planar graph in order to take advantage of a
   generalized adjacency measure (shortest graph distance)
   \citep{Barsi:2003}. This idea has been further explored in
   \citep{Come:2010,Come:2015} where authors take advantage of a star
-  topology to map differents clusters. However, this approach cannot
-  be easily generalized because the topology is tailored to the data. }
+  topology to map different clusters. However, this approach cannot
+  be easily generalized because the topology is tailored to the input data. }
 %
 In this work, we are interested in exploring an alternative topology
 in order to specifically handle cases where the intrinsic dimension of
