--- a/article-overleaf/00-preamble-arxiv.tex
+++ b/article-overleaf/00-preamble-arxiv.tex
@@ -39,7 +39,7 @@
           Université  de Bordeaux, CNRS UMR 5293}
 \affil[3]{LaBRI, Université de Bordeaux,
           Institut Polytechnique de Bordeaux, CNRS UMR 5800}
-\affil[4]{adNomus Inc., San Jose, CA, USA}
+\affil[4]{Independent Researcher, Irvine, CA, USA}
 \date{}
 
 \newcommand{\gid}[1]{#1}
