--- a/article-overleaf/article-neco-revision.tex
+++ b/article-overleaf/article-neco-revision.tex
@@ -17,7 +17,7 @@
 {$^{\displaystyle 1}$Inria Bordeaux Sud-Ouest.}\\
 {$^{\displaystyle 2}$Institut des Maladies Neurodégénératives, Université  de Bordeaux, CNRS UMR 5293.}\\
 {$^{\displaystyle 3}$LaBRI, Université de Bordeaux, Institut Polytechnique de Bordeaux, CNRS UMR 5800.}\\
-{$^{\displaystyle 4}$adNomus Inc., San Jose, CA, USA.}\\
+{$^{\displaystyle 4}$Independent Researcher, Irvine, CA, USA.}\\
 %
 
 %\ \\[-2mm]
